<resources>
    <string name="app_name">Satapp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Perfil</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">SIGN IN</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>

    <string name="btn_register">SIGN UP</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_password_repeat">Repita Contraseña</string>

    <string name="button_cancelar">Cancelar</string>
    <string name="button_guardar">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_nombre">Name</string>
    <string name="text_created_at">Nov 6th, 2017</string>
    <string name="text_update_at">Nov 6th, 2017</string>
    <string name="text_fichero">Subir Imagen</string>
    <string name="hint_titulo">Titulo</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="text_add_ticket">Crear Ticket</string>
    <string name="text_edit">Editar</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_description">Descripción</string>
    <string name="text_send">Enviar</string>
    <string name="hint_type">Tipo</string>
    <string name="hint_cod">Código</string>
    <string name="hint_ubi">Ubicación</string>

    <string name="text_edit_photo">Cambiar foto</string>

</resources>
