<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.satapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_equipo"
        android:name="com.example.satapp.ui.dashboard.EquiposListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_equiposlist_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.satapp.ui.notifications.UbicacionFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_ubicacion_list" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.satapp.ui.profile.perfil"
        android:label="Perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>