<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTicketActivity">

    <EditText
        android:id="@+id/editTextAddTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_titulo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAddDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_descripcion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/editTextAddTitulo"
        app:layout_constraintStart_toStartOf="@id/editTextAddTitulo"
        app:layout_constraintTop_toBottomOf="@id/editTextAddTitulo" />

    <Button
        android:id="@+id/buttonFichero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_fichero"
        app:layout_constraintStart_toEndOf="@+id/imageViewAddFoto"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddDescripcion" />

    <ImageView
        android:id="@+id/imageViewAddFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonFichero"
        app:layout_constraintStart_toStartOf="@+id/editTextAddDescripcion"
        app:layout_constraintTop_toTopOf="@+id/buttonFichero"
        app:srcCompat="@mipmap/ic_launcher" />

</androidx.constraintlayout.widget.ConstraintLayout>