<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_large"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewFotoEquipo"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/buttonEditarFotoEquipo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@color/common_google_signin_btn_text_dark_focused"
                    android:text="@string/text_edit_photo"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <ProgressBar
                android:id="@+id/progressBarLoadEditEquipo"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:scrollbars="vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_40">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/hintTextTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_type"
                    android:inputType="text"
                    android:textColor="@color/grey_95"
                    android:theme="@style/EditText.Yellow" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_40">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/hintTextCod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cod"
                    android:inputType="text"
                    android:textColor="@color/grey_95"
                    android:theme="@style/EditText.Yellow" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUbi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_ubi"
                android:textColorHint="@color/grey_40">

                <Spinner
                    android:id="@+id/miSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle"
                android:layout_weight="1" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonSendEditEquipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/text_send"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
