<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipToPadding="false"
    android:scrollbars="none"
    android:scrollingCache="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_mlarge"
            android:layout_marginTop="@dimen/spacing_mlarge"
            android:layout_marginRight="@dimen/spacing_mlarge"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewFotoPerfil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/spacing_xsmall"
                android:src="@drawable/ic_person_black_24dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end|right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textInputNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_nombre"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_100_"
                    android:textSize="16dp"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/textViewCreatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_created_at"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_90" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewUpdateAt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_update_at"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/grey_90" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_mlarge" />

        <Button
            android:id="@+id/btnEditarFoto"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="101dp"
            android:layout_height="39dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="Editar Foto"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnBorrarFoto"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="102dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="Borrar Foto"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="11sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnEditarPerfil"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="101dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="Editar perfil"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="11sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewEmail"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_weight="0"
                android:src="@drawable/ic_email_black_24dp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_mlarge"
                android:layout_marginRight="@dimen/spacing_mlarge"
                android:layout_weight="1"
                android:lineSpacingExtra="8sp"
                android:text="Texto"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_90"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_margin="@dimen/spacing_mlarge"
            android:background="#03000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewRol"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_weight="0"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/textViewRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_mlarge"
                android:layout_marginRight="@dimen/spacing_mlarge"
                android:layout_weight="1"
                android:lineSpacingExtra="8sp"
                android:text="Texto"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_90"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPromocionar"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="Promocionar a técnico"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="11sp"
                android:visibility="invisible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_margin="@dimen/spacing_mlarge"
            android:background="#03000000" />

        <EditText
            android:id="@+id/etEditNombre"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etPasswordActual"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Contraseña Actual"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSalvarEditPerfil"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="208dp"
            android:layout_height="37dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="Editar perfil"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="11sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSavePassword"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="165dp"
            android:layout_height="32dp"
            android:layout_marginLeft="32dp"
            android:layout_weight="1"
            android:text="Editar Contraseña"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="11sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnEditContraseña"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="135dp"
            android:layout_height="34dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="Editar contraseña"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="11sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>